@@ -13,7 +13,7 @@ public class LineFollowingApp extends LogicThread {
 
 	private enum STAGE { START, MOVE, DONE }
 	private STAGE stage = STAGE.START;
-	private static final int WAYPOINTS_TO_FOLLOW = 5;
+	private static final int WAYPOINTS_TO_FOLLOW = 10;
 
 	private RobotMotion moat;
 	
@@ -35,7 +35,7 @@ public class LineFollowingApp extends LogicThread {
 				gvh.trace.traceSync("LAUNCH");
 				gvh.sleep(rand.nextInt(1500)+1000);
 				stage = STAGE.MOVE;
-				moat.goTo(generatePoint());
+				moat.goTo(generateLinePoint());
 				System.out.println("Starting motion!");
 				break;
 			
@@ -43,7 +43,7 @@ public class LineFollowingApp extends LogicThread {
 				if(!moat.inMotion) {
 					if(cur_waypoint < WAYPOINTS_TO_FOLLOW) {
 						cur_waypoint ++;
-						moat.goTo(generatePoint());
+						moat.goTo(generateLinePoint());
 					} else {
 						stage = STAGE.DONE;
 					}
@@ -59,10 +59,20 @@ public class LineFollowingApp extends LogicThread {
 		}
 	}
 	
-	private ItemPosition generatePoint() {
+	private ItemPosition generateRandomPoint() {
 		int x = rand.nextInt(500) - 250;
 		int y = rand.nextInt(500) - 250;
 		ItemPosition mypos = gvh.gps.getMyPosition();
 		return new ItemPosition("goHere", mypos.x + x, mypos.y + y, 0);
+	}
+	
+	private ItemPosition generateLinePoint() {
+		int x = 50;
+		int y = 0;
+		ItemPosition mypos = gvh.gps.getMyPosition();
+		String robotName = gvh.id.getName();
+        Integer robotNum = Integer.parseInt(robotName.substring(3)); // assumes: botYYY
+		return new ItemPosition("goHere", robotNum * 500, SimSettings.GRID_YSIZE/2, 0);
+        //return new ItemPosition("goHere", robotNum * 500, robotNum * 500, 0);
 	}
 }
